Starter_Code/PyPoll/PyPollResults.txt
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~
$ conda run
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~
$ cd "C:\Users\JGonzalez3\Documents\DataBCampWorkHere\03-Python\3\Challenge\Starter_Code\PyPollMain.py"
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~/Documents/DataBCampWorkHere/03-Python/3/Challenge/Starter_Code/PyPollMain.py
$ Python PyPoll.py
C:\Users\JGonzalez3\AppData\Local\anaconda3\Python.exe: can't open file 'C:\\Users\\JGonzalez3\\Documents\\DataBCampWorkHere\\03-Python\\3\\Challenge\\Starter_Code\\PyPollMain.py\\PyPoll.py': [Errno 2] No such file or directory
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~/Documents/DataBCampWorkHere/03-Python/3/Challenge/Starter_Code/PyPollMain.py
$ Python PyPollMain.py
  File "C:\Users\JGonzalez3\Documents\DataBCampWorkHere\03-Python\3\Challenge\Starter_Code\PyPollMain.py\PyPollMain.py", line 5
    csvpath = os.path.join('..', 'PyPool', ))
                                            ^
SyntaxError: unmatched ')'
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~/Documents/DataBCampWorkHere/03-Python/3/Challenge/Starter_Code/PyPollMain.py
$ Python PyPollMain.py
  File "C:\Users\JGonzalez3\Documents\DataBCampWorkHere\03-Python\3\Challenge\Starter_Code\PyPollMain.py\PyPollMain.py", line 5
    csvpath = os.path.join('..', 'PyPool', ))
                                            ^
SyntaxError: unmatched ')'
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~/Documents/DataBCampWorkHere/03-Python/3/Challenge/Starter_Code/PyPollMain.py
$ Python PyPollMain.py
  File "C:\Users\JGonzalez3\Documents\DataBCampWorkHere\03-Python\3\Challenge\Starter_Code\PyPollMain.py\PyPollMain.py", line 5
    csvpath = os.path.join('..', 'PyPool', ))
                                            ^
SyntaxError: unmatched ')'
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~/Documents/DataBCampWorkHere/03-Python/3/Challenge/Starter_Code/PyPollMain.py
$ Python PyPollMain.py
Election Results
-------------------------
Total Votes: 369711
-------------------------
Charles Casper Stockham: 23.049% (85213)
Diana DeGette: 73.812% (272892)
Raymon Anthony Doane: 3.139% (11606)
-------------------------
Winner: Diana DeGette
-------------------------
(base)
NORCALWASTE+JGonzalez3@Recology_Johnn MINGW64 ~/Documents/DataBCampWorkHere/03-Python/3/Challenge/Starter_Code/PyPollMain.py